# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  coverage.xml  fix_coverage_xml.py  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml  sonar.yml
tests/: __init__.py  test_imports.py  test_parser.py
