[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Lysenkov Ilya <lysenkov_iv21@mail.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
pytest = "^8.3.3"
pytest-cov = "^4.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

